--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,5 +60,10 @@
       <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
     {% endif %}
 
+    <!-- Embed the Plotly plot using an iframe -->
+    <div class="plotly-plot">
+      <iframe src="https://github.com/ricco-venterea/ricco-venterea.github.io/blob/master/files/map_2024.html" width="100%" height="600px" frameborder="0"></iframe>
+    </div>
+
   </article>
 </div>
