--- a/_layouts/interactive.html
+++ b/_layouts/interactive.html
@@ -21,6 +21,6 @@ layout: default
     {% endunless %}
     {{ content }}
     <!-- Embed Bokeh plot using an iframe -->
-    <iframe src="https://ricco-venterea.github.io/ricco-venterea.github.io/files/map_2024.html" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe src="https://github.com/ricco-venterea/ricco-venterea.github.io/blob/master/files/map_2024.html" width="100%" height="600px" frameborder="0"></iframe>
   </div>
 </div>
