--- a/_layouts/interactive.html
+++ b/_layouts/interactive.html
@@ -21,6 +21,6 @@ layout: default
     {% endunless %}
     {{ content }}
     <!-- Embed Bokeh plot using an iframe -->
-    <iframe src="/map_2024.html" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe src="/_layouts/map_2024.html" width="100%" height="600px" frameborder="0"></iframe>
   </div>
 </div>
