--- a/_layouts/interactive.html
+++ b/_layouts/interactive.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: compress
 ---
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
@@ -15,7 +15,7 @@ layout: default
 <div id="main" role="main">
   {% include sidebar.html %}
 
-  <div class="interactive">
+  <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 class="page__title">{{ page.title }}</h1>
     {% endunless %}
