--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -62,7 +62,7 @@
 
     <!-- Embed the Plotly plot using an iframe -->
     <div class="plotly-plot">
-      <iframe src="https://github.com/ricco-venterea/ricco-venterea.github.io/blob/master/files/map_2024.html" width="100%" height="600px" frameborder="0"></iframe>
+      <iframe src="https://ricco-venterea.github.io/ricco-venterea.github.io/files/map_2024.html" width="100%" height="600px" frameborder="0"></iframe>
     </div>
 
   </article>
